; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/adc/extr_ti-ads1015.c_ads1015_event_channel_enable.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/adc/extr_ti-ads1015.c_ads1015_event_channel_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ads1015_data = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ads1015_data*, i32, i32)* @ads1015_event_channel_enable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ads1015_event_channel_enable(%struct.ads1015_data* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.ads1015_data*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.ads1015_data* %0, %struct.ads1015_data** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.ads1015_data*, %struct.ads1015_data** %4, align 8
  %8 = call i32 @ads1015_event_channel_enabled(%struct.ads1015_data* %7)
  %9 = call i32 @WARN_ON(i32 %8)
  %10 = load i32, i32* %5, align 4
  %11 = load %struct.ads1015_data*, %struct.ads1015_data** %4, align 8
  %12 = getelementptr inbounds %struct.ads1015_data, %struct.ads1015_data* %11, i32 0, i32 0
  store i32 %10, i32* %12, align 4
  %13 = load i32, i32* %6, align 4
  %14 = load %struct.ads1015_data*, %struct.ads1015_data** %4, align 8
  %15 = getelementptr inbounds %struct.ads1015_data, %struct.ads1015_data* %14, i32 0, i32 1
  store i32 %13, i32* %15, align 4
  ret void
}

declare dso_local i32 @WARN_ON(i32) #1

declare dso_local i32 @ads1015_event_channel_enabled(%struct.ads1015_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
